argocd/apps/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: energy-balancing-mvp
  labels:
    app: grafana
spec:
  selector:
    # These were found using kubectl describe deployment
    app.kubernetes.io/instance: umbrella-chart
    app.kubernetes.io/name: grafana
    app.kubernetes.io/managed-by: Helm
  ports:
    - name: grafana-port
      port: 80
      targetPort: 80
  type: LoadBalancer
